--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
         "antd": "^4.19.3",
         "github-markdown-css": "^5.1.0",
         "hast-util-sanitize": "^4.0.0",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
         "remark-gfm": "^3.0.1",
         "remark-parse": "^10.0.1",
         "remark-react": "^9.0.1",
@@ -28,7 +26,10 @@
         "@types/react": "^17.0.33",
         "@types/react-dom": "^17.0.10",
         "@vitejs/plugin-react": "^1.0.7",
-        "typescript": "^4.5.4",
         "vite": "^2.8.0"
+    },
+    "peerDependencies": {
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2"
     }
 }
