--- a/package.json
+++ b/package.json
@@ -1,31 +1,55 @@
 {
     "name": "react-markdown-editor",
-    "private": true,
-    "version": "0.0.0",
+    "private": false,
+    "version": "0.0.1",
+    "license": "MIT",
+    "main": "dist/cjs/index.js",
+    "module": "dist/esm/index.js",
+    "files": [
+        "dist"
+    ],
+    "types": "dist/index.d.ts",
     "scripts": {
         "dev": "vite",
         "build": "tsc && vite build",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "rollup": "rollup -c"
     },
     "dependencies": {
-        "@ant-design/icons": "^4.7.0",
         "@codemirror/basic-setup": "^0.19.1",
         "@codemirror/lang-markdown": "^0.19.6",
         "@codemirror/language-data": "^0.19.2",
         "@types/styled-components": "^5.1.24",
-        "antd": "^4.19.3",
         "github-markdown-css": "^5.1.0",
         "hast-util-sanitize": "^4.0.0",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-icons": "^4.3.1",
         "remark-gfm": "^3.0.1",
         "remark-parse": "^10.0.1",
         "remark-react": "^9.0.1",
-        "styled-components": "^5.3.5",
+        "remark-stringify": "^10.0.2",
         "unified": "^10.1.2"
     },
     "devDependencies": {
+        "@rollup/plugin-commonjs": "^21.0.3",
+        "@rollup/plugin-node-resolve": "^13.2.0",
+        "@rollup/plugin-typescript": "^8.3.1",
         "@types/react": "^17.0.33",
         "@types/react-dom": "^17.0.10",
+        "@typescript-eslint/eslint-plugin": "^5.19.0",
+        "@typescript-eslint/parser": "^5.19.0",
         "@vitejs/plugin-react": "^1.0.7",
+        "eslint": "^8.13.0",
+        "eslint-config-google": "^0.14.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-react": "^7.29.4",
+        "rollup": "^2.70.1",
+        "rollup-plugin-dts": "^4.2.1",
+        "rollup-plugin-import-css": "^3.0.3",
+        "rollup-plugin-postcss": "^4.0.2",
+        "tslib": "^2.3.1",
+        "typescript": "^4.6.3",
         "vite": "^2.8.0"
     },
     "peerDependencies": {
