--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
         "lib": ["DOM", "DOM.Iterable", "ESNext"],
         "allowJs": false,
         "skipLibCheck": false,
-        "esModuleInterop": false,
+        "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
         "strict": true,
         "forceConsistentCasingInFileNames": true,
@@ -13,8 +13,12 @@
         "moduleResolution": "Node",
         "resolveJsonModule": true,
         "isolatedModules": true,
-        "noEmit": true,
-        "jsx": "react-jsx"
+        "jsx": "react-jsx",
+        "declaration": true,
+        "declarationDir": "types",
+        "outDir": "dist",
+        "sourceMap": true,
+        "emitDeclarationOnly": true
     },
     "include": ["src"],
     "references": [{ "path": "./tsconfig.node.json" }]
