change markdown preview

--- a/package.json
+++ b/package.json
@@ -1,59 +1,73 @@
 {
-    "name": "react-markdown-editor",
-    "private": false,
-    "version": "0.0.1",
-    "license": "MIT",
-    "main": "dist/cjs/index.js",
-    "module": "dist/esm/index.js",
-    "files": [
-        "dist"
-    ],
-    "types": "dist/index.d.ts",
-    "scripts": {
-        "dev": "vite",
-        "build": "tsc && vite build",
-        "preview": "vite preview",
-        "rollup": "rollup -c"
-    },
-    "dependencies": {
-        "@codemirror/basic-setup": "^0.19.1",
-        "@codemirror/lang-markdown": "^0.19.6",
-        "@codemirror/language-data": "^0.19.2",
-        "@types/styled-components": "^5.1.24",
-        "github-markdown-css": "^5.1.0",
-        "hast-util-sanitize": "^4.0.0",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-icons": "^4.3.1",
-        "remark-gfm": "^3.0.1",
-        "remark-parse": "^10.0.1",
-        "remark-react": "^9.0.1",
-        "remark-stringify": "^10.0.2",
-        "unified": "^10.1.2"
-    },
-    "devDependencies": {
-        "@rollup/plugin-commonjs": "^21.0.3",
-        "@rollup/plugin-node-resolve": "^13.2.0",
-        "@rollup/plugin-typescript": "^8.3.1",
-        "@types/react": "^17.0.33",
-        "@types/react-dom": "^17.0.10",
-        "@typescript-eslint/eslint-plugin": "^5.19.0",
-        "@typescript-eslint/parser": "^5.19.0",
-        "@vitejs/plugin-react": "^1.0.7",
-        "eslint": "^8.13.0",
-        "eslint-config-google": "^0.14.0",
-        "eslint-config-prettier": "^8.5.0",
-        "eslint-plugin-react": "^7.29.4",
-        "rollup": "^2.70.1",
-        "rollup-plugin-dts": "^4.2.1",
-        "rollup-plugin-import-css": "^3.0.3",
-        "rollup-plugin-postcss": "^4.0.2",
-        "tslib": "^2.3.1",
-        "typescript": "^4.6.3",
-        "vite": "^2.8.0"
-    },
-    "peerDependencies": {
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2"
-    }
+  "name": "oh-my-markdown-editor",
+  "private": false,
+  "version": "0.0.3",
+  "license": "MIT",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "files": [
+    "dist"
+  ],
+  "types": "dist/index.d.ts",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "rollup": "rollup -c"
+  },
+  "dependencies": {
+    "@codemirror/basic-setup": "^0.19.1",
+    "@codemirror/lang-markdown": "^0.19.6",
+    "@codemirror/language-data": "^0.19.2",
+    "classnames": "^2.3.1",
+    "github-markdown-css": "^5.1.0",
+    "hast-util-sanitize": "^4.0.0",
+    "highlight.js": "^11.5.1",
+    "react-icons": "^4.3.1",
+    "react-markdown": "^8.0.3",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-figure": "^1.0.1",
+    "rehype-highlight": "^5.0.2",
+    "rehype-parse": "^8.0.4",
+    "rehype-raw": "^6.1.1",
+    "rehype-react": "^7.1.1",
+    "rehype-sanitize": "^5.0.1",
+    "rehype-slug": "^5.0.1",
+    "rehype-stringify": "^9.0.3",
+    "rehype-toc": "^3.0.2",
+    "rehype-video": "^1.2.2",
+    "remark-breaks": "^3.0.2",
+    "remark-codesandbox": "^0.10.1",
+    "remark-gfm": "^3.0.1",
+    "remark-kbd": "^1.1.0",
+    "remark-parse": "^10.0.1",
+    "remark-react": "^9.0.1",
+    "remark-rehype": "^10.1.0",
+    "remark-stringify": "^10.0.2",
+    "remark-toc": "^8.0.1",
+    "unified": "^10.1.2"
+  },
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^21.0.3",
+    "@rollup/plugin-node-resolve": "^13.2.0",
+    "@rollup/plugin-typescript": "^8.3.1",
+    "@types/react": "^17.0.33",
+    "@types/react-dom": "^17.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.19.0",
+    "@typescript-eslint/parser": "^5.19.0",
+    "@vitejs/plugin-react": "^1.0.7",
+    "eslint": "^8.13.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-react": "^7.29.4",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "rollup": "^2.70.1",
+    "rollup-plugin-dts": "^4.2.1",
+    "rollup-plugin-import-css": "^3.0.3",
+    "rollup-plugin-postcss": "^4.0.2",
+    "tslib": "^2.3.1",
+    "typescript": "^4.6.3",
+    "vite": "^2.8.0"
+  }
 }
