--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,26 @@
 {
-    "compilerOptions": {
-        "target": "ESNext",
-        "useDefineForClassFields": true,
-        "lib": ["DOM", "DOM.Iterable", "ESNext"],
-        "allowJs": false,
-        "skipLibCheck": false,
-        "esModuleInterop": true,
-        "allowSyntheticDefaultImports": true,
-        "strict": true,
-        "forceConsistentCasingInFileNames": true,
-        "module": "ESNext",
-        "moduleResolution": "Node",
-        "resolveJsonModule": true,
-        "isolatedModules": true,
-        "jsx": "react-jsx",
-        "declaration": true,
-        "declarationDir": "types",
-        "outDir": "dist",
-        "sourceMap": true,
-        "emitDeclarationOnly": true
-    },
-    "include": ["src"],
-    "references": [{ "path": "./tsconfig.node.json" }]
+  "compilerOptions": {
+    "target": "ESNext",
+    "useDefineForClassFields": true,
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "allowJs": false,
+    "skipLibCheck": false,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "resolveJsonModule": true,
+    "isolatedModules": false,
+    "jsx": "react-jsx",
+    "declaration": true,
+    "declarationDir": "types",
+    "outDir": "dist",
+    "sourceMap": true,
+    "emitDeclarationOnly": true
+  },
+  "exclude": ["src/vite-env.d.ts"],
+  "include": ["src"],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
